--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <h1>Welcome to the Homepage!</h1>
     <h1>inicio de proyecto!</h1>
 
+    <a href="#">Index</a>
+    <a href="nationalParks.html">National Parks</a>
+    <a href="mountains.html">Mountains</a>
+
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
