--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <!-- Global Style Sheet -->
     <link rel="stylesheet" href="assets/css/styles.css">
+    <!-- Import JSON -->
+    
 
     <title>Enjoy the Outdoors Capstone Starter</title>
 
@@ -22,7 +24,23 @@
     <a href="#">Index</a>
     <a href="nationalParks.html">National Parks</a>
     <a href="mountains.html">Mountains</a>
+    <ul>
 
+    </ul>
+    <script>
+       const listE1 = document.querySelector('ul');
+
+       fetch ('./assets/data/mountains.json')
+             .then(res => res.json())
+              .then(data => {
+                data.mountains.forEach(post => {
+                    listE1.insertAdjacentHTML('beforeend',`<li>${post.name}</li>`);
+                    listE1.insertAdjacentHTML('beforeend',`<img src="assets/images/mountains/${post.img}">`);
+                });
+              });
+       
+
+    </script>
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
